trunk/Archive2/ae/041c6263e83881/output
main.cpp: In function 'int main()':
main.cpp:20:10: error: expected ';' before 't1'
     time t1;
          ^
main.cpp:20:12: warning: statement is a reference, not call, to function 'time' [-Waddress]
     time t1;
            ^
main.cpp:20:12: warning: statement has no effect [-Wunused-value]
main.cpp:23:5: error: 't1' was not declared in this scope
     t1.setAge(tmp);
     ^
